feat: support comment search and retcode update
